--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,16 @@
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.14.0",
         "pardalsalcap/hailo": "dev-develop",
-        "illuminate/contracts": "^10.0"
+        "illuminate/contracts": "^10.0",
+        "livewire/livewire": "^3.3"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.8",
         "orchestra/testbench": "^8.8",
-        "pestphp/pest": "^2.20",
+        "pestphp/pest": "^2.33",
         "pestphp/pest-plugin-arch": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
+        "pestphp/pest-plugin-laravel": "^2.2",
         "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
